# dispatch-model-benchmarks

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  cache_items.txt  cmd  command_scratch.txt  compile_O0.txt  compile_O1.txt  compile_O1_fresh_build.txt  compile_O2.txt  compile_O2_fresh_build.txt  compile_O3.txt  compile_O3_fresh_build.txt  environment.yml  gmon.out  main_test_concepts_fma.txt  perf_results.txt  run_perf_tests.sh  test_concepts_objdump.txt  test_runtime_fma_objdump.txt
data/: perf_summaries_updated.txt
data/perf/2025-02-27_15-37-15/: concepts_expensive_perf_summary.txt  concepts_fma_perf_summary.txt  crtp_expensive_perf_summary.txt  crtp_fma_perf_summary.txt  runtime_expensive_perf_summary.txt  runtime_fma_perf_summary.txt
data/perf/2025-02-27_21-37-21/: concepts_expensive_perf_summary.txt  concepts_fma_perf_summary.txt  crtp_expensive_perf_summary.txt  crtp_fma_perf_summary.txt  runtime_expensive_perf_summary.txt  runtime_fma_perf_summary.txt
data/single_test_results/: 2025-02-27-09-47-20-817.txt
include/: benchmark_utils.hpp  cli_utils.hpp  concepts_polymorphism.hpp  crtp_polymorphism.hpp  math_functions.hpp  plain_templates.hpp  polymorphism_tests.hpp  runtime_polymorphism.hpp  test_runner.hpp  utils.hpp
src/: benchmark_utils.cpp  cli_utils.cpp  concepts_polymorphism.cpp  crtp_polymorphism.cpp  main.cpp  plain_templates.cpp  polymorphism_benchmark.cpp  polymorphism_tests.cpp  runtime_polymorphism.cpp  test_runner.cpp  utils.cpp
test/: df_generator.py  parse_test_data.py  perf_data_cleaner.py  perf_events.json  perf_tests.py  run_perf_tests.sh  view_dfs.py
test/core/: run_tests.sh  test_benchmark_utils.cpp  test_cli_utils.cpp
test/objdump/: concepts_expensive  concepts_fma  crtp_expensive  crtp_fma  runtime_expensive  runtime_fma
test/profiling/: build_all_variants.py  convert_perf_to_pprof.py  multi_build_perf_tester.py  perf_data_cleaner.py  perf_record.py  perf_tests.py  project_builder.py  test_categories.json  view_dfs.py
